[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "graphrule"
version = "0.1.0"
description = "A basic graph rule project"
authors = ["Vincent"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.setuptools.packages.find]
where = ["src"]
